# brambhand

./: .gitignore  AGENT.md  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  README.md  RELEASE_NOTES.md  REQUIREMENTS.md  SKILLS.md  TODO.md  VALIDATION.md  VERIFICATION.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/workflows/: ci.yml  cli-smoke.yml  coverage.yml
assets/stl/: README.md
assets/stl/idealized/: cone_r0p5_h1.stl  cube_1m.stl  cylinder_r0p5_h1.stl  de_laval_nozzle_idealized.stl  frustum_r0p2_r0p5_h1.stl  nozzle_frustum_idealized.stl
assets/stl/metadata/: fixtures.json
assets/stl/reference/: docking_ring_reference_stub.stl  nozzle_reference_stub.stl
badges/: coverage.json
c/: CMakeLists.txt
c/brambhand/: CMakeLists.txt
c/brambhand/include/brambhand/client/common/: cacheline.hpp  cli_parse.hpp  desktop_cli_options.hpp  plot_geometry.hpp  render_config.hpp  render_semantics.hpp  replay_ingest.hpp  runtime_frame.hpp
c/brambhand/include/brambhand/client/desktop/: replay_quicklook_workflow.hpp  shell.hpp  trajectory_infographic.hpp
c/brambhand/src/lib/client/: CMakeLists.txt  cli_parse.cpp  client_common.cpp  desktop_cli_options.cpp  desktop_shell.cpp  plot_geometry.cpp  render_config.cpp  render_semantics.cpp  replay_ingest.cpp  replay_quicklook_workflow.cpp  trajectory_infographic.cpp
c/brambhand/src/lib/client_common/: CMakeLists.txt
c/brambhand/src/test/: test_cli_parse.cpp  test_desktop_cli_options.cpp  test_desktop_shell.cpp  test_plot_geometry.cpp  test_render_config.cpp  test_render_config_validation.cpp  test_render_semantics.cpp  test_renderer_capability_profile.cpp  test_renderer_mode.cpp  test_replay_ingest.cpp  test_replay_ingest_benchmark_options.cpp  test_replay_ingest_pipeline.cpp  test_replay_quicklook_workflow.cpp  test_runtime_frame.cpp  test_trajectory_infographic.cpp
c/client/common/: CMakeLists.txt
c/client/desktop/: CMakeLists.txt
docs/: AGENT_MEMORY.md  API_REFERENCE.md  CONCEPTS.md  DISTRIBUTED_PROTOCOL.md  PERFORMANCE_SLOS.md  QUICKSTART.md  README.md  REPLAY_INGEST_TUNING.md  RESEARCH_NOTES.md  RUNTIME_INTERFACES.md  TUTORIALS.md  WORKFLOWS.md
examples/: README.md  earth_jupiter_hohmann_replay_demo.py  ex_r10p5_001_earth_jupiter_transfer.py
interfaces/: runtime_bridge.proto
python/brambhand/: README.md  pyproject.toml
python/brambhand/src/brambhand/bridge/: __init__.py  runtime_stream.py
python/brambhand/src/brambhand/communication/: delay_channel.py
python/brambhand/src/brambhand/core/: event_bus.py  state_snapshot.py
python/brambhand/src/brambhand/coupling/: __init__.py  controller.py  exchange_contracts.py  fsi_coupler.py  performance.py  policy.py  telemetry.py
python/brambhand/src/brambhand/dynamics/: mechanisms.py
python/brambhand/src/brambhand/fluid/: __init__.py  contracts.py
python/brambhand/src/brambhand/fluid/cfd/: __init__.py
python/brambhand/src/brambhand/fluid/cfd/adapters/: __init__.py  su2_adapter.py
python/brambhand/src/brambhand/infrastructure/: station.py
python/brambhand/src/brambhand/mission/: __init__.py  assembly_topology.py
python/brambhand/src/brambhand/operations/: rendezvous_metrics.py
python/brambhand/src/brambhand/propulsion/: thrust_estimator.py
python/brambhand/src/brambhand/structures/: fracture.py
python/brambhand/src/brambhand/structures/fem/: geometry.py
python/brambhand/src/brambhand/trajectory/: __init__.py  handoff_contracts.py  maneuver_contracts.py  maneuver_executor.py  replay_validation.py  targeting_baseline.py
python/brambhand/src/brambhand/visualization/: __init__.py  quicklook_contracts.py  quicklook_pipeline.py  trajectory_overlay.py  trajectory_render_contracts.py  trajectory_widget_contracts.py
python/brambhand/tests/: test_assembly_topology.py  test_cli_commands.py  test_docking_scenarios.py  test_fluid_fsi_provider_contracts.py  test_fsi_benchmarks.py  test_fsi_controller.py  test_fsi_coupler.py  test_fsi_exchange_contracts.py  test_fsi_integrated_chain.py  test_fsi_policy.py  test_fsi_telemetry.py  test_maneuver_executor.py  test_quicklook_contracts.py  test_replay_validation.py  test_runtime_stream_bridge.py  test_soi_handoff_contracts.py  test_station.py  test_stl_fixtures.py  test_targeting_baseline.py  test_topology_transition_kind_parsing.py  test_trajectory_render_contracts.py  test_trajectory_widget_contracts.py
python/brambhand/tests/snapshots/: quicklook_output_snapshot.json  quicklook_telemetry_snapshot.json
python/src/brambhand/: cli.py
python/tests/: test_cli.py  test_deterministic_replay.py  test_mass_model.py  test_quicklook_contracts.py  test_rendezvous_metrics.py  test_replay_log.py  test_stl_fixtures.py  test_structures_r3_contracts.py
src/brambhand/communication/: visibility.py
src/brambhand/dynamics/: __init__.py  rigid_body_6dof.py
src/brambhand/fluid/: __init__.py  contracts.py
src/brambhand/guidance/: orbit_elements.py
src/brambhand/mission/: __init__.py
src/brambhand/operations/: constellation.py  docking_model.py
src/brambhand/physics/: body.py
src/brambhand/propulsion/: __init__.py  chamber_flow.py  leak_jet_coupling.py  leakage_model.py  performance.py  thrust_estimator.py
src/brambhand/scenario/: replay_log.py  scenario_schema.py
src/brambhand/spacecraft/: mass_model.py  propulsion.py
src/brambhand/structures/: __init__.py
tests/: test_assembly_topology.py  test_cli_commands.py  test_command_model.py  test_communication.py  test_constellation.py  test_dynamics_r1_contracts.py  test_gravity_model.py  test_integrator.py  test_m5_integration_scenarios.py  test_orbit_elements.py  test_propulsion.py  test_propulsion_r2_contracts.py  test_scenario_loader.py  test_stl_fixtures.py  test_structures_r3_contracts.py  test_trajectory_predictor.py  test_vector.py
(+31 files in other folders)
