[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "brambhand"
version = "0.1.1"
description = "A scientifically accurate spaceflight sandbox."
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "brambhand contributors" }
]
dependencies = [
  "numpy>=2.2",
  "scipy>=1.15",
  "astropy>=7.0",
]

[project.scripts]
brambhand = "brambhand.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-cov>=6.0",
  "hypothesis>=6.130",
  "ruff>=0.11",
  "mypy>=1.15",
]

[tool.hatch.build.targets.wheel]
packages = ["src/brambhand"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.12"
strict = false
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["scipy", "scipy.*"]
ignore_missing_imports = true
